--- a/blog.html
+++ b/blog.html
@@ -14,7 +14,7 @@
         <nav class="bg-[#F9F7F3]">
             <div class="navbar max max-w-7xl mx-auto">
                 <div class="navbar-start">
-                  <a id="home-btn" class="btn btn-ghost text-xl bg-[#B4F461]">Blog</a>
+                  <a id="home-btn" class="btn btn-ghost text-xl bg-[#B4F461]">Home</a>
                 </div>
                 <div class="navbar-center lg:flex">
                  <img src="/image/logo.png" alt="">
@@ -29,37 +29,39 @@
     </header>
     <main>
        <div class="max-w-7xl mx-auto mt-20">
-        <h1 class="text-5xl font-bold mb-20 ">ant qustion ask me easely?</h1>
+        <h1 class="text-5xl font-bold mb-20 ">Important FAQ ?</h1>
         <!--FAQ_1-->
         <div class="collapse collapse-arrow bg-base-200 ">
             <input type="radio" name="my-accordion-2" checked="checked" />
-            <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+            <div class="collapse-title text-xl font-medium">What is the document object model (DOM) ?</div>
             <div class="collapse-content">
-              <p>hello</p>
+              <p>The DOM (Document Object Model) is a programming interface for web documents. It represents the structure of an HTML or XML document as a tree of objects, where each object corresponds to a part of the document (like elements, attributes, or text). The DOM allows programming languages, like JavaScript, to interact with and manipulate web pages dynamically.</p>
             </div>
           </div>
           <!--FAQ_2-->
           <div class="collapse collapse-arrow bg-base-200">
             <input type="radio" name="my-accordion-2" />
-            <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+            <div class="collapse-title text-xl font-medium">how do you select an element from DOM ?</div>
             <div class="collapse-content">
-              <p>hello</p>
+              <p>
+                Selecting an element from the DOM can be done using various methods provided by JavaScript. Here are some common methods to select elements, along with examples for each:</p>
             </div>
           </div>
           <!--FAQ_3-->
           <div class="collapse collapse-arrow bg-base-200">
             <input type="radio" name="my-accordion-2" />
-            <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+            <div class="collapse-title text-xl font-medium">what is event delegation in the contex of the dom and why it useful ?</div>
             <div class="collapse-content">
-              <p>hello</p>
+              <p>
+                Event Delegation is a technique in the context of the Document Object Model (DOM) that allows you to manage events more efficiently by utilizing the bubbling phase of event propagation. Instead of attaching an event listener to each individual child element, you attach a single event listener to a common parent element. This parent listens for events that bubble up from its children.</p>
             </div>
           </div>
     <!--FAQ_4-->
           <div class="collapse collapse-arrow bg-base-200">
             <input type="radio" name="my-accordion-2" />
-            <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+            <div class="collapse-title text-xl font-medium">how do you manipliate an elemene attribute and style using the dom?</div>
             <div class="collapse-content">
-              <p>hello</p>
+              <p>Manipulating an element's attributes and styles using the Document Object Model (DOM) is a fundamental part of web development. Here’s how you can do it using JavaScript:</p>
             </div>
           </div>
        </div>
@@ -68,5 +70,6 @@
 
     </footer>
     <script src="home.js"></script>
+    
 </body>
 </html>
