--- a/blog.html
+++ b/blog.html
@@ -17,11 +17,11 @@
                   <a id="home-btn" class="btn btn-ghost text-xl bg-[#B4F461]">Home</a>
                 </div>
                 <div class="navbar-center lg:flex">
-                 <img src="/image/logo.png" alt="">
+                 <img src="./image/logo.png" alt="">
                  <h1>Donate Bangladesh</h1>
                 </div>
                 <div class="navbar-end">
-                    <img src="/image/coin.png" alt="">
+                    <img src="./image/coin.png" alt="">
                     <h1>550 BDT</h1>
                 </div>
               </div>
